# tool-model-to-pipeline

./: .gitignore  LICENSE  MANIFEST.in  README.kr.md  README.md  install.py  install.sh  metadata.json  pyproject.toml  requirements.txt  requirements_modelsdk.txt  requirements_mpkcli.txt  setup.py
docs/en/: installation.md  logs.md
docs/kr/: installation.md
docs/kr/usage/: infer.md  (+1 more)
get_fps/: main.py
model_to_pipeline/: __init__.py  cli.py  main.py  run.py
model_to_pipeline/compilers/: compile_yolo_generic.py  compiler_base.py
model_to_pipeline/constants/: calib_dataset.py  yolo_labels.py
model_to_pipeline/monitor/: app.py  requirements.txt
model_to_pipeline/pipeline/: pipeline_base.py  pipeline_create.py
model_to_pipeline/steps/: step_compile.py  step_download_calib.py  step_download_model.py  step_mpk_create.py  step_pipeline_create.py  step_surgery.py  steps_base.py
model_to_pipeline/surgeons/: __init__.py  surgeon_base.py  surgeon_yolo11.py  surgeon_yolo11_seg.py  surgeon_yolov10.py  surgeon_yolov8.py  surgeon_yolov8_seg.py  surgeon_yolov9.py  surgeon_yolovx.py  yolo_model.py
model_to_pipeline/utils/: loader.py  onnx_helpers.py  process_util.py  state.py  tee.py  yaml_display.py
pcie_test_applications/: readme.md
pcie_test_applications/cpp_detection_app/: CMakeLists.txt  ReadMe.md  main.cpp
pcie_test_applications/python_app/: infer_detect.py  infer_seg.py  infer_seg_simple.py  utils.py  utils_seg.py
run_sample_pipeline/: __init__.py  create_peppi_pipeline.py  main.py
samples/: yolov8m.yaml  yolov9c.yaml
sima_tool/: __init__.py  main.py
(+43 files in other folders)
